--- a/style.css
+++ b/style.css
@@ -11,7 +11,7 @@ body{
     background: #fff;
     width: 90%;
     max-width: 600px;
-    margin: 100px;
+    margin: 100px auto 0;
     border-radius: 10px;
     padding: 30px;
 }
