--- a/style.css
+++ b/style.css
@@ -68,3 +68,30 @@ body{
 .incorrect{
     background: #ff9393;
 }
+/* Add a black background color to the top navigation */
+.topnav {
+    background-color: #333;
+    overflow: hidden;
+  }
+  
+  /* Style the links inside the navigation bar */
+  .topnav a {
+    float: left;
+    color: #f2f2f2;
+    text-align: center;
+    padding: 14px 16px;
+    text-decoration: none;
+    font-size: 17px;
+  }
+  
+  /* Change the color of links on hover */
+  .topnav a:hover {
+    background-color: #ddd;
+    color: rgb(121, 75, 109);
+  }
+  
+  /* Add a colour to the active/current link */
+  .topnav a.active {
+    background-color: #b9457f;
+    color: white;
+  }
