--- a/start.css
+++ b/start.css
@@ -1,24 +1,28 @@
-@import url('https://fonts.googleapis.com/css2?family=Nova+Square&display=swap');
-
-:root {
-    background-color: rgb(29, 26, 26)
-}
 * {
+    margin: 0;
+    padding: 0;
+    font-family: 'Poppins', sans-serif;
+    box-sizing: border-box;
+}
+body{
+    background: #b9457f;
+}
+/* * {
     box-sizing: border-box;
     margin: 0;
     padding: 0;
     font-size: 62.5%;
     font-family: "Nova Square", cursive;
-}
-
+} */
 h1 {
-    font-size: 4.5rem;
+    font-size: 4rem;
+    /* font-weight: 300; */
     color: #fff;
     margin-bottom: 5rem;
 }
 
 h2 {
-    font-size: 4.2rem;
+    font-size: 3.2rem;
     margin-bottom: 4rem;
 }
 
@@ -61,13 +65,13 @@ h2 {
     text-align: center;
     margin-bottom: 1rem;
     text-decoration: none;
-    color: rgb(28, 26, 26);
-    background: linear-gradient(90deg, rgb(18, 92, 255) 0%, rgb(0, 102, 255) 100%);
+    color: rgb(255, 255, 255);
+    background: linear-gradient(90deg, rgb(34, 34, 34) 0%, rgb(34, 34, 34) 100%);
     border-radius: 4px;
 }
 .btn:hover {
     cursor: pointer;
-    box-shadow: 0 0.4rem 1.4rem 0 rgba(8, 114, 244, 0.6);
+    box-shadow: 0 0.4rem 1.4rem 0 rgba(34, 34, 34);
     transition: transform 150ms;
     transform: scale(1.03);
 }
@@ -78,11 +82,11 @@ h2 {
 }
 
 #highscore-btn {
-    background: linear-gradient(90deg, rgb(255, 247, 9) 0%, rgb(240, 221, 6) 100%);
-}
+    background: linear-gradient(90deg, rgb(34, 34, 34) 0%, rgb(34, 34, 34) 100%);
+} 
 
 #highscore-btn:hover {
-    box-shadow: 0 0.4rem 1.4rem 0 rgba(255,255,0,0.5)
+    box-shadow: 0 0.4rem 1.4rem 0 rgba(34, 34, 34)
 }
 
 .fa-medal {
