--- a/start.css
+++ b/start.css
@@ -141,3 +141,17 @@ input::placeholder {
     font-size: 2rem;
     color: #fff
 }
+
+
+/* scores css here */
+body {
+    color: fff;
+}
+#highScoresList {
+    list-style: none;
+    margin-bottom: 4rem;
+}
+.high-score {
+    font-size: 2.8rem;
+    margin-bottom: 0.5rem;
+}
